Pushing BS added NavBar/Content Management

--- a/index.html
+++ b/index.html
@@ -2,68 +2,120 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="css\normalize.css">
   <link rel="stylesheet" type="text/css" href="css\styles.css">
   <link rel="stylesheet" type="text/css" href="css\media.css">
   <!--Social Media Icon Libray! -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Fancy Curly Font! -->
-  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 
 
 
   <title>Toe Beans R Us</title>
 </head>
   <body id='top'>
-    <div class="NavBar">
-      <nav>
-        <ul>
-          <li class='center'><a class="active centered" href="#">Home</a></li>
-          <li><a href="https://random.cat" target="_blank">Random Cat</a></li>
-          <li><a href="#">Contact Me</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </nav>
-    </div>
+    <nav class="navbar backbluer navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand fancyscript" href="#">ToeBeans R Us</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cat</a>
+          <a class="nav-item nav-link" href="#">Contact Me</a>
+          <a class="nav-item nav-link" href="#">About</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="mainBody">
-      <h1>Toe Beans R Us</h1>
-      <hr/>
+      <div class="jumbotron jumbotron-fluid backblue">
+        <div class="container">
+          <h1 class="display-4">ToeBeans R Us</h1>
+          <p class="h6">The pink squishy pads on the underside of an animal's paws, particularly a cat's</p>
+          <p class="text-muted text-align-right">- so named for their resemblance to jelly beans.</p>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-sm-3 backbluer m-2 p-1">
+            <p>They Have Glands Behind Their Toe Beans. Behind the toe beans of every cat are glands. These glands secrete an oil that has a scent only detectable by cats.</p>
+          </div>
+          <div class="col-sm-3 backblue m-2 p-1">
+            <p>ToeBeans are actually important for a cats survival. They act as a shock absorber for your feline friends allowing them to jump from high places safely. They also store the claw, and act as insulation.</p>
+          </div>
+          <div class="col-sm-3 backbluer m-2 p-1">
+            <img class="img-fluid" src="img/tb1.jpg" alt="Pads of the Cat">
+          </div>
+          <div class="col-sm-3 backbluer m-2 p-1">
+            <img class="img-fluid" src="img/tb6.png" alt="Pads of the Cat">
+          </div>
+        </div>
+      </div>
+
+
+<!--
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-4">
+              <div class="card backblue content-bord">
+                <img src="img/tb1.jpg" class="card-img-top" alt="Pads of the Cat">
+                <div class="card-body">
+                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card backblue content-bord">
+                <img src="img/tb2.jpg" class="card-img-top" alt="Pads of the Cat">
+                <div class="card-body">
+                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card backblue content-bord">
+                <img src="img/tb3.jpg" class="card-img-top" alt="Pads of the Cat">
+                <div class="card-body">
+                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div> -->
+
+
       <div class="main-section">
-        <div class="clearfix firstcontent content">
-          <!-- TOE BEANS -->
-          <img class ="cat none" alt="cats!" src="img/TB1.jpg">
-          <p class="">And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen. Mountains are so simple, they're hard. We start with a vision in our heart, and we put it on canvas.
-            We touch the canvas, the canvas takes what it wants. You can spend all day playing with mountains. We don't want to set these clouds on fire.
-            Use absolutely no pressure.
-          </p>
-        </div>
-        <div class="content">
-          <p class="">
-            The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.
-          </p>
-        </div>
-        <div class="content">
-          <p class="">And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen. Mountains are so simple, they're hard. We start with a vision in our heart, and we put it on canvas.
-            We touch the canvas, the canvas takes what it wants. You can spend all day playing with mountains. We don't want to set these clouds on fire.
-            Use absolutely no pressure.
-          </p>
-        </div>
+
+
+
 
       </div>
     </div>
-    <div class="secondary-content">
-      <div class="content flex-cats">
+    <div class="secondary-content my-3">
+      <div class="backblue flex-cats">
+
         <img class ="cat"  alt="cats!" src="img/TB1.jpg">
         <img class ="cat"  alt="cats!" src="img/TB2.jpg">
         <img class ="cat"  alt="cats!" src="img/TB3.jpg">
         <img class ="cat"  alt="cats!" src="img/TB4.jpg">
         <img class ="cat"  alt="cats!" src="img/TB5.jpg">
         <img class ="cat"  alt="cats!" src="img/TB6.png">
+      </div>
 
+      <div class="aboutMe backblue mt-3" id"about">
+        <p>About Me content goes here</p>
       </div>
 
     </div>
-
+    <hr/>
     <footer>
       <div class="dasfooter">
         <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
@@ -72,6 +124,8 @@
         <p>&copy ToeBeans! - Thank You For Visiting // <a href="#top">Return to Top</a></p>
       </div>
     </footer>
+    <!-- LOAD JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
     <script src="js/java.js"></script>
   </body>
 </html>
