Massive Overhaul pushing the BootStrap Layout and added Pokemon Quiz Tbl

--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Cursive / Header/Titles -->
   <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+  <!-- MainBody Font -->
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css\normalize.css">
   <link rel="stylesheet" type="text/css" href="css\styles.css">
-  <link rel="stylesheet" type="text/css" href="css\media.css">
   <!--Social Media Icon Libray! -->
-
-  <!-- Fancy Curly Font! -->
-
-
-
   <title>Toe Beans R Us</title>
 </head>
   <body id='top'>
-    <nav class="navbar backbluer navbar-expand-lg navbar-light fixed-top">
+    <!-- Nav Bar!  -->
+    <nav class="navbar backbluer navbar-expand-lg navbar-dark fixed-top">
       <a class="navbar-brand fancyscript" href="#">ToeBeans R Us</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,100 +25,83 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cat</a>
-          <a class="nav-item nav-link" href="#">Contact Me</a>
+          <a class="nav-item nav-link" href="#contact">Contact Me</a>
           <a class="nav-item nav-link" href="#">About</a>
         </div>
       </div>
     </nav>
 
     <div class="mainBody">
+      <!-- JumboTron Alert/Welcome Mat  -->
+
       <div class="jumbotron jumbotron-fluid backblue">
         <div class="container">
-          <h1 class="display-4">ToeBeans R Us</h1>
-          <p class="h6">The pink squishy pads on the underside of an animal's paws, particularly a cat's</p>
-          <p class="text-muted text-align-right">- so named for their resemblance to jelly beans.</p>
+          <h1 class="display-4 fancyscript">ToeBeans R Us</h1>
+          <p class="h6">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+          <p></p>
         </div>
       </div>
 
       <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-sm-3 backbluer m-2 p-1">
+        <div class="row justify-content-around">
+          <div class="col-md-4 backbluer">
+            <h3>Kenny Berry</h3>
             <p>They Have Glands Behind Their Toe Beans. Behind the toe beans of every cat are glands. These glands secrete an oil that has a scent only detectable by cats.</p>
           </div>
-          <div class="col-sm-3 backblue m-2 p-1">
+          <div class="col-md-4 backblue">
+            <h3>Kenny Berry</h3>
             <p>ToeBeans are actually important for a cats survival. They act as a shock absorber for your feline friends allowing them to jump from high places safely. They also store the claw, and act as insulation.</p>
           </div>
-          <div class="col-sm-3 backbluer m-2 p-1">
-            <img class="img-fluid" src="img/tb1.jpg" alt="Pads of the Cat">
-          </div>
-          <div class="col-sm-3 backbluer m-2 p-1">
-            <img class="img-fluid" src="img/tb6.png" alt="Pads of the Cat">
-          </div>
-        </div>
-      </div>
+          <div class="col-md-4 backbluer">
 
-
-<!--
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-4">
-              <div class="card backblue content-bord">
-                <img src="img/tb1.jpg" class="card-img-top" alt="Pads of the Cat">
-                <div class="card-body">
-                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
-                </div>
-              </div>
+            <h3>Kenny Berry</h3>            <p>Hello! My name is Kenny. This is my codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
           </div>
-          <div class="col-md-4">
-              <div class="card backblue content-bord">
-                <img src="img/tb2.jpg" class="card-img-top" alt="Pads of the Cat">
-                <div class="card-body">
-                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
-                </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-              <div class="card backblue content-bord">
-                <img src="img/tb3.jpg" class="card-img-top" alt="Pads of the Cat">
-                <div class="card-body">
-                  <p class="card-text">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
-                </div>
-              </div>
+          <div class="col-md-12 backblue">
+            <img class ="cat"  alt="cats!" src="img/TB1.jpg">
+            <img class ="cat"  alt="cats!" src="img/TB2.jpg">
+            <img class ="cat"  alt="cats!" src="img/TB3.jpg">
+            <img class ="cat"  alt="cats!" src="img/TB4.jpg">
+            <img class ="cat"  alt="cats!" src="img/TB5.jpg">
+            <img class ="cat"  alt="cats!" src="img/TB6.png">
           </div>
         </div>
-      </div> -->
-
-
-      <div class="main-section">
-
-
-
-
       </div>
     </div>
-    <div class="secondary-content my-3">
-      <div class="backblue flex-cats">
 
-        <img class ="cat"  alt="cats!" src="img/TB1.jpg">
-        <img class ="cat"  alt="cats!" src="img/TB2.jpg">
-        <img class ="cat"  alt="cats!" src="img/TB3.jpg">
-        <img class ="cat"  alt="cats!" src="img/TB4.jpg">
-        <img class ="cat"  alt="cats!" src="img/TB5.jpg">
-        <img class ="cat"  alt="cats!" src="img/TB6.png">
+
+    <div class="secondary-content">
+      <div class="backbluer flex-cats">
+        <p class="pokeQuestion">Find out What Pokemon You Are - Click the Pokeball!</p>
+        <div class='pokeHider'>
+          <table align="center">
+            <th colspan="2" class="pokeResults">Enter your DOB Below</th>
+              <tr><td>Enter Month</td><td><input type="text" label="Enter Month" class="pokeMonth" value="8"></td></tr>
+              <tr><td>Enter Day</td><td><input type="text" class="pokeDay" value="31" ></td></tr>
+              <tr><td>Enter Year</td><td><input type="text" class="pokeYear" value="91" ></td></tr>
+              <tr>
+                <th colspan="2">
+                  <button onClick="pokeQuiz()" class="pokeSubmit" type="submit"></button>
+                </th>
+              </tr>
+          </table>
+        </div>
+        <div class="pokeKazam">
+          <button class="pokeReveal" type="submit"></button>
+        </div>
       </div>
 
-      <div class="aboutMe backblue mt-3" id"about">
-        <p>About Me content goes here</p>
+      <div class="contactMeHere backblue pb-3" id"contact">
+        <p class="p-0 m-0">Contact Me!</p>
+        <p p-auto>You can reach me at any of the following places.</p>
+        <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
+        <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
+        <a class="fa fa-instagram social"href="https://instagram.com/kennyisnt" target="_blank"></a>
       </div>
 
     </div>
     <hr/>
     <footer>
       <div class="dasfooter">
-        <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
-        <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
-        <a class="fa fa-instagram social"href="https://instagram.com/kennyisnt" target="_blank"></a>
         <p>&copy ToeBeans! - Thank You For Visiting // <a href="#top">Return to Top</a></p>
       </div>
     </footer>
