Final CodeLouisville Project Push

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
   <body id='top'>
     <!-- Nav Bar!  -->
-    <nav class="navbar backbluer navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar backbluer navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand fancyscript" href="#">ToeBeans R Us</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,37 +24,36 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link contactButton" href="#contact">Contact Me</a>
+          <a class="nav-item nav-link aboutButton" href="#about">About</a>
           <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cat</a>
-          <a class="nav-item nav-link" href="#contact">Contact Me</a>
-          <a class="nav-item nav-link" href="#">About</a>
         </div>
       </div>
     </nav>
 
     <div class="mainBody">
       <!-- JumboTron Alert/Welcome Mat  -->
-
-      <div class="jumbotron jumbotron-fluid backblue">
+      <div class="jumbotron jumbotron-fluid backblue mb-0">
         <div class="container">
           <h1 class="display-4 fancyscript">ToeBeans R Us</h1>
-          <p class="h6">The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
-          <p></p>
+          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
       </div>
 
       <div class="container-fluid">
         <div class="row justify-content-around">
           <div class="col-md-4 backbluer">
-            <h3>Kenny Berry</h3>
+            <h3>Neat Fact</h3>
             <p>They Have Glands Behind Their Toe Beans. Behind the toe beans of every cat are glands. These glands secrete an oil that has a scent only detectable by cats.</p>
           </div>
           <div class="col-md-4 backblue">
-            <h3>Kenny Berry</h3>
+            <h3>Survival</h3>
             <p>ToeBeans are actually important for a cats survival. They act as a shock absorber for your feline friends allowing them to jump from high places safely. They also store the claw, and act as insulation.</p>
           </div>
-          <div class="col-md-4 backbluer">
-
-            <h3>Kenny Berry</h3>            <p>Hello! My name is Kenny. This is my codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
+          <div class="col-md-4 backbluer aboutMe">
+            <h3>About Me</h3>
+            <p>The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+            <p>Hello! My name is Kenny. This is my codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
           </div>
           <div class="col-md-12 backblue">
             <img class ="cat"  alt="cats!" src="img/TB1.jpg">
@@ -89,8 +88,12 @@
           <button class="pokeReveal" type="submit"></button>
         </div>
       </div>
-
-      <div class="contactMeHere backblue pb-3" id"contact">
+      <div class="col-md-12 backblue aboutMe">
+        <h3>About Me</h3>
+        <p class='mb-2'>Hello! My name is Kenny. This is my #codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
+        <p class='mb-0'>I am still new and learning the best ways to code in HTML/CSS/JavaScript and welcome any tips!</p>
+      </div>
+      <div class="contactMeHere backbluer pb-3" id"contact">
         <p class="p-0 m-0">Contact Me!</p>
         <p p-auto>You can reach me at any of the following places.</p>
         <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
