Final CL Project Push Pt 2.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link contactButton" href="#contact">Contact Me</a>
           <a class="nav-item nav-link aboutButton" href="#about">About</a>
+          <a class="nav-item nav-link contactButton" href="#contact">Contact Me</a>
           <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cat</a>
         </div>
       </div>
@@ -36,24 +36,23 @@
       <div class="jumbotron jumbotron-fluid backblue mb-0">
         <div class="container">
           <h1 class="display-4 fancyscript">ToeBeans R Us</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <p class="lead">A codeLouisville Project</p>
         </div>
       </div>
 
       <div class="container-fluid">
-        <div class="row justify-content-around">
-          <div class="col-md-4 backbluer">
+        <div class="row">
+          <div class="col-md-4 backbluer p-3">
             <h3>Neat Fact</h3>
             <p>They Have Glands Behind Their Toe Beans. Behind the toe beans of every cat are glands. These glands secrete an oil that has a scent only detectable by cats.</p>
           </div>
-          <div class="col-md-4 backblue">
+          <div class="col-md-4 backblue p-3">
             <h3>Survival</h3>
             <p>ToeBeans are actually important for a cats survival. They act as a shock absorber for your feline friends allowing them to jump from high places safely. They also store the claw, and act as insulation.</p>
           </div>
-          <div class="col-md-4 backbluer aboutMe">
-            <h3>About Me</h3>
+          <div class="col-md-4 backbluer p-3">
+            <h3>Define?</h3>
             <p>The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
-            <p>Hello! My name is Kenny. This is my codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
           </div>
           <div class="col-md-12 backblue">
             <img class ="cat"  alt="cats!" src="img/TB1.jpg">
@@ -88,12 +87,12 @@
           <button class="pokeReveal" type="submit"></button>
         </div>
       </div>
-      <div class="col-md-12 backblue aboutMe">
+      <div class="col-md-12 backblue aboutMe p-3" id="about">
         <h3>About Me</h3>
         <p class='mb-2'>Hello! My name is Kenny. This is my #codeLouisville submission for March 2019. This is to showcase the use of CSS/HTML and javaScript in a front-end development role.</p>
         <p class='mb-0'>I am still new and learning the best ways to code in HTML/CSS/JavaScript and welcome any tips!</p>
       </div>
-      <div class="contactMeHere backbluer pb-3" id"contact">
+      <div class="contactMeHere backbluer p-3" id="contact">
         <p class="p-0 m-0">Contact Me!</p>
         <p p-auto>You can reach me at any of the following places.</p>
         <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
