--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link aboutButton" href="#about">About</a>
           <a class="nav-item nav-link contactButton" href="#contact">Contact Me</a>
-          <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cat</a>
+          <a class="nav-item nav-link" href="https://random.cat" target="_blank">Random Cats</a>
         </div>
       </div>
     </nav>
@@ -36,31 +36,33 @@
       <div class="jumbotron jumbotron-fluid backblue mb-0">
         <div class="container">
           <h1 class="display-4 fancyscript">ToeBeans R Us</h1>
-          <p class="lead">A codeLouisville Project</p>
+          <p class="lead pb-0">A codeLouisville Project</p>
         </div>
       </div>
 
+      <!-- 1-2-3 column layout utilizing bootstrap -->
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-4 backbluer p-3">
+          <div class="col-md-6 col-lg-4 backbluer p-3">
             <h3>Neat Fact</h3>
             <p>They Have Glands Behind Their Toe Beans. Behind the toe beans of every cat are glands. These glands secrete an oil that has a scent only detectable by cats.</p>
           </div>
-          <div class="col-md-4 backblue p-3">
+          <div class="col-md-6 col-lg-4 backblue p-3">
             <h3>Survival</h3>
             <p>ToeBeans are actually important for a cats survival. They act as a shock absorber for your feline friends allowing them to jump from high places safely. They also store the claw, and act as insulation.</p>
           </div>
-          <div class="col-md-4 backbluer p-3">
+          <div class="col-md-12 col-lg-4 backbluer p-3">
             <h3>Define?</h3>
             <p>The pink squishy pads on the underside of an animal's paws, particularly a cat's - so named for their resemblance to jelly beans.</p>
+            <!-- This Definition was pulled from UrbanDictionary.com -->
           </div>
-          <div class="col-md-12 backblue">
-            <img class ="cat"  alt="cats!" src="img/TB1.jpg">
-            <img class ="cat"  alt="cats!" src="img/TB2.jpg">
-            <img class ="cat"  alt="cats!" src="img/TB3.jpg">
-            <img class ="cat"  alt="cats!" src="img/TB4.jpg">
-            <img class ="cat"  alt="cats!" src="img/TB5.jpg">
-            <img class ="cat"  alt="cats!" src="img/TB6.png">
+          <div class="col-md-12 backblue py-4 justify-content-around">
+            <img class ="cat"  alt="Toebeans for Jolene" src="img/TB1.jpg">
+            <img class ="cat"  alt="Plasma ToeBeans" src="img/TB2.jpg">
+            <img class ="cat"  alt="Flattened Toebeans" src="img/TB3.jpg">
+            <img class ="cat"  alt="Regular ToeBeans" src="img/TB4.jpg">
+            <img class ="cat"  alt="Sleepy ToeBeans" src="img/TB5.jpg">
+            <img class ="cat"  alt="ToeBean Bear" src="img/TB6.png">
           </div>
         </div>
       </div>
@@ -108,7 +110,10 @@
       </div>
     </footer>
     <!-- LOAD JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.3.0.min.js"
+  integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4="
+  crossorigin="anonymous"></script>
     <script src="js/java.js"></script>
   </body>
 </html>
