Added Minified Versions of CSS and JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css\normalize.css">
-  <link rel="stylesheet" type="text/css" href="css\styles.css">
+  <link rel="stylesheet" type="text/css" href="css\cs-min.css">
   <!--Social Media Icon Libray! -->
   <title>Toe Beans R Us</title>
 </head>
@@ -114,6 +114,6 @@
       src="https://code.jquery.com/jquery-3.3.0.min.js"
       integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4="
       crossorigin="anonymous"></script>
-    <script src="js/java.js"></script>
+    <script src="js/js-min.js"></script>
   </body>
 </html>
